# caffe-rs

./: .gitignore  Cargo.toml  Readme.md  build.rs
.cargo/: config.toml
.github/workflows/: rust-nightly.yml  rust-stable-latest.yml  rust-stable-min.yml
res/: docs-header.html
src/: blob.rs  common.rs  data_transformer.rs  filler.rs  internal_thread.rs  layer.rs  layer_factory.rs  lib.rs  macros.rs  net.rs  synced_mem.rs
src/layers/: absval_layer.rs  accuracy_layer.rs  argmax_layer.rs  base_conv_layer.rs  base_data_layer.rs  batch_norm_layer.rs  batch_reindex_layer.rs  bias_layer.rs  bnll_layer.rs  clip_layer.rs  concat_layer.rs  mod.rs  neuron_layer.rs
src/macros/: aop_check.rs  mod.rs  utils.rs
src/proto/: mod.rs
src/util/: blocking_queue.rs  im2col.rs  insert_splits.rs  io.rs  math_functions.rs  mkl_alternate.rs  mod.rs  rng.rs  upgrade_proto.rs
