[package]
name = "caffe-rs"
version = "0.1.0"
authors = ["mx <mx@mx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cblas = "0.3"
bytes = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
env_logger = "*"
test-env-log = "0.2"

[build-dependencies]
protobuf = { version = "2", features = ["with-bytes"] }
protoc-rust = "2"
