[package]
name = "caffe-rs"
version = "0.1.0"
authors = ["mx <mx@mx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cblas = "0.3"
bytes = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
static_init = "^1"
paste = "1"
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"
mt19937 = "2"
float_next_after = "0.1"
#num-traits = "0.2"

[dev-dependencies]
env_logger = "*"
test-env-log = "0.2"

[build-dependencies]
protobuf = { version = "2", features = ["with-bytes"] }
protoc-rust = "2"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./res/docs-header.html" ]
